--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.23.0",
     "@clerk/nextjs": "^6.30.0",
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@microsoft/clarity": "^1.0.0",
