feat: Enhance question handling and navigation with tipoQuestao parameter
- Updated ChoiceTopics component to include tipoQuestao in question drawing requests and navigation.
- Modified QuestionByBlock component to handle tipoQuestao for drawing questions by block.
- Introduced TabsListsTopics component to manage topic tabs based on tipoQuestao.
- Refactored BlocoPage to integrate new TabsListsTopics and improved layout.
- Updated EscolhaTipo page to provide clearer navigation options for question types.
- Enhanced Question component to manage alternative selection and confirmation states.
- Added Ads type definition for better handling of advertisement data.
- Implemented a new Dialog component for consistent modal usage across the application.
- Refactored fetchPrivateClient to handle token management and error responses more effectively.
- Removed unused sign-in and sign-up pages to streamline authentication flow.
- Updated middleware to manage public and private routes more effectively.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@clerk/nextjs": "^6.30.0",
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@microsoft/clarity": "^1.0.0",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -29,6 +29,7 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+    "@ebay/nice-modal-react": "^1.2.13",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/next-pwa": "^5.6.9",
