--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^6.30.0",
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@microsoft/clarity": "^1.0.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -24,6 +25,7 @@
     "next": "15.4.6",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
